Closed Bug 1743847 Opened 2 years ago Closed 2 years ago

hello-triangle wgpu example on WebGPU backend crashes firefox nightly

Categories

(Core :: Graphics: WebGPU, defect)

Firefox 96
defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: mrk, Assigned: kvark, NeedInfo)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36

Steps to reproduce:

Compiled and run slightly modified hello-triangle wgpu example (patch attached)
Tested on current wgpu master (sha: fbbce2523001) and firefox nightly 96.0a1 (2021-12-01)

Actual results:

Firefox crashes every time just after opening a page.

Expected results:

Validation error should be raised about unsupported swapchain format like native wgpu does.

Assignee: nobody → dmalyshau
Severity: -- → S3
Component: Untriaged → Graphics: WebGPU
Product: Firefox → Core

My configuration:

Linux (Ubuntu 20.04), Intel GPU

$ glxinfo | grep Intel
    Vendor: Intel (0x8086)
    Device: Mesa Intel(R) HD Graphics 630 (KBL GT2) (0x591b)
OpenGL vendor string: Intel
OpenGL renderer string: Mesa Intel(R) HD Graphics 630 (KBL GT2)
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/469124ce89e9
Throw an exception in WebGPU GetCurrentTexture r=emilio
Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Flags: qe-verify+

Hi, would it be possible if you could attach a working test case for manual QA testing? We cannot reproduce the issue and confirm the fix without it.
Thank you.

Flags: needinfo?(mrk)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: