Bug 1743847 - Throw an exception in WebGPU GetCurrentTexture r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D133143