dom/webgpu/CanvasContext.cpp
@@ -61,11 +61,14 @@ bool CanvasContext::UpdateWebRenderCanvasData(
 void CanvasContext::Configure(const dom::GPUCanvasConfiguration& aDesc) {
   Unconfigure();
 
+  // these formats are guaranteed by the spec
   switch (aDesc.mFormat) {
     case dom::GPUTextureFormat::Rgba8unorm:
+    case dom::GPUTextureFormat::Rgba8unorm_srgb:
       mGfxFormat = gfx::SurfaceFormat::R8G8B8A8;
       break;
     case dom::GPUTextureFormat::Bgra8unorm:
+    case dom::GPUTextureFormat::Bgra8unorm_srgb:
       mGfxFormat = gfx::SurfaceFormat::B8G8R8A8;
       break;
     default:
@@ -102,13 +105,20 @@ void CanvasContext::Unconfigure() {
   }
   mBridge = nullptr;
   mTexture = nullptr;
+  mGfxFormat = gfx::SurfaceFormat::UNKNOWN;
 }
 
 dom::GPUTextureFormat CanvasContext::GetPreferredFormat(Adapter&) const {
   return dom::GPUTextureFormat::Bgra8unorm;
 }
 
-RefPtr<Texture> CanvasContext::GetCurrentTexture() { return mTexture; }
+RefPtr<Texture> CanvasContext::GetCurrentTexture(ErrorResult& aRv) {
+  if (!mTexture) {
+    aRv.ThrowOperationError("Canvas not configured");
+    return nullptr;
+  }
+  return mTexture;
+}
 
 bool CanvasContext::UpdateWebRenderLocalCanvasData(
     layers::WebRenderLocalCanvasData* aCanvasData) {
