dom/webgpu/ipc/WebGPUParent.cpp
@@ -20,7 +20,7 @@ static mozilla::LazyLogModule sLogger("WebGPU");
 // TODO: refactor this to avoid stack-allocating the buffer all the time.
 class ErrorBuffer {
   // if the message doesn't fit, it will be truncated
-  static constexpr unsigned BUFFER_SIZE = 256;
+  static constexpr unsigned BUFFER_SIZE = 512;
   char mUtf8[BUFFER_SIZE] = {};
   bool mGuard = false;
 
